@startuml
class AuthService {
    + registerUser(user: UserRegisterDto): boolean
    + loginUser(user: UserLoginDto): String ' Returns JWT token
}


class AuthController {
    + register(user: UserRegisterDto)): boolean
    + login(user: UserLoginDto): boolean
}

class UserRegisterDto {
    - userID: String
    - name: String
    - email: String
    - password: String
}

class UserLoginDto {
    - email: String
    - password: String
}

class UserRepository {
    + existsByEmail(email: String): boolean
    + passwordMatch(password: String): boolean
    + findByEmail(email: String): Optional<User>
}

UserLoginDto ..> AuthController : sent to
AuthController ..> AuthService : calls
AuthService ..> UserRepository : uses

UserRegisterDto ..> AuthController : sent to
AuthController ..> AuthService : calls
AuthService ..> UserRepository : uses
@enduml